--- a/src/pages/content/content.scss
+++ b/src/pages/content/content.scss
@@ -11,15 +11,16 @@ page-content {
 .cf::after { clear: both; }
 
 #card-stack{
-	height: 92%;
-	z-index:3;
-	//position: absolute;
+	height: 90%;
+	margin-right:10px;
+	z-index:2;
+	position: absolute;
 }
 
 #map{
 	height: 90%;
-	z-index: 2;
-	//position: absolute;
+	z-index: 1;
+	position: absolute;
 }
 
 .container {
